# SciSummarizer

./: .gitignore  README.md  pyproject.toml  req.py  requirements.txt
baml_src/: clients.baml  summary.baml
src/: arxiv_fetcher.py  llm_summarizer.py  main.py  pdf2img.py  pdf_processor.py  summaries_to_md_convertor.py
